
plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

def PROJECTNAME = "Coliper IBean"

group = "org.coliper"
version = '0.9.0'
description = 'creates all artifacts of the Coliper IBean project'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}



// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api 'org.apache.commons:commons-lang3:3.15.0'
    api 'com.palantir.javapoet:javapoet:0.13.0'

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.google.guava:guava:33.2.0-jre'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
    testImplementation 'commons-beanutils:commons-beanutils:1.9.4'
    testImplementation 'org.assertj:assertj-core:3.26.0'
}


//////////////////////////////////////////////////////////////////////////////////////////
// Documentation related.

javadoc {
    title = PROJECTNAME + ' API ' + version 
    options.source = "17"
    options.addBooleanOption('Xdoclint:none', true)
    options.stylesheetFile file('doc-src/javadoc-stylesheet.css', PathValidation.FILE)
    options.links "https://javadoc.io/doc/org.apache.commons/commons-lang3/3.15.0/",
                  "https://docs.oracle.com/en/java/javase/17/docs/api/",
                  "https://www.javadoc.io/doc/com.fasterxml.jackson.core/jackson-core/2.17.1/",
                  "https://www.javadoc.io/doc/com.fasterxml.jackson.core/jackson-databind/2.17.1/",
                  "https://www.javadoc.io/doc/com.google.code.gson/gson/2.10.1/"
//    options.linksOffline("https://static.javadoc.io/com.google.code.gson/gson/2.8.5/", 
//                         "./doc-src/gson-2.4-javadoc")
}

task createPagesIntro(type: Copy) {
    from 'doc-src/intro.templ.md'
    into 'docs'
    filter {l -> l.replace('$version$', version)
                 .replace('$javadoc.url$', 'api')
                 .replace('$source.url$', 'https://github.com/coliper/ibean/blob/master')}
    rename '.*', 'index.md'
}

task createRootReadme(type: Copy) {
    from 'doc-src/intro.templ.md'
    into buildDir
    filter {l -> l.replace('$version$', version)
                 .replace('$javadoc.url$', "https://static.javadoc.io/org.coliper/ibean/${version}")
                 .replace('$source.url$', "https://github.com/coliper/ibean/blob/v${version}")}
    rename '.*', 'README.md'
}

task createUserManuals {
    dependsOn 'createPagesIntro'
    dependsOn 'createRootReadme'
}

//////////////////////////////////////////////////////////////////////////////////////////
// Creation of upload artefacts.

base {
    archivesName = "ibean"
}

task sourcesJar(type: Jar, dependsOn: classes) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    archiveClassifier = 'javadoc'
    from javadoc.destinationDir
}

artifacts {
    archives sourcesJar
    archives javadocJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'Coliper IBean'
                packaging = 'jar'
                description = 'Java library used to define beans as interfaces.'
                url = 'https://coliper.github.io/ibean'

                scm {
                    connection = 'scm:git:git://github.com/coliper/ibean.git'
                    developerConnection = 'scm:git:ssh://github.com:coliper/ibean.git'
                    url = 'http://github.com/coliper/ibean/tree/master'
                }

                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }

                developers {
                    developer {
                        id = 'alex'
                        name = 'Alexander Einhaeuser'
                        email = 'alex@coliper.org'
                    }
                }
            }
        }
    }

    repositories {
        maven {
            name = "OSSRH"
            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl

            credentials {
                username = project.findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME")
                password = project.findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD")
            }
        }
    }
}

signing {
    sign publishing.publications.mavenJava
}

